// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoTable > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  margin: 0;
  width: 100%;
}

.emotion-0 .emotion-3 {
  width: 100%;
}

.emotion-2 {
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-2:first-of-type {
  padding-top: 0;
}

.emotion-2:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-2>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-4 {
  font-weight: 500;
  color: #222638;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.emotion-6 {
  color: #3f4250;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.emotion-8 {
  display: block;
  min-width: 0;
  width: 100%;
}

.emotion-8>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <dl
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr);"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: 2fr 1fr; --uv_3mg8xe1: 2fr 1fr; --uv_3mg8xe2: 2fr 1fr; --uv_3mg8xe3: 2fr 1fr; --uv_3mg8xe4: 2fr 1fr; --uv_3mg8xe5: 2fr 1fr;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: 1fr; --uv_3mg8xe1: 1fr; --uv_3mg8xe2: 1fr; --uv_3mg8xe3: 1fr; --uv_3mg8xe4: 1fr; --uv_3mg8xe5: 1fr;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr);"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with multiLine 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  margin: 0;
  width: 100%;
}

.emotion-0 .emotion-3 {
  width: 100%;
}

.emotion-2 {
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-2:first-of-type {
  padding-top: 0;
}

.emotion-2:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-2>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-4 {
  font-weight: 500;
  color: #222638;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.emotion-6 {
  color: #3f4250;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.emotion-8 {
  display: block;
  min-width: 0;
  width: 100%;
}

.emotion-8>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <dl
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr);"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: 2fr 1fr; --uv_3mg8xe1: 2fr 1fr; --uv_3mg8xe2: 2fr 1fr; --uv_3mg8xe3: 2fr 1fr; --uv_3mg8xe4: 2fr 1fr; --uv_3mg8xe5: 2fr 1fr;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: 1fr; --uv_3mg8xe1: 1fr; --uv_3mg8xe2: 1fr; --uv_3mg8xe3: 1fr; --uv_3mg8xe4: 1fr; --uv_3mg8xe5: 1fr;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr);"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with width 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  margin: 0;
  width: 100%;
}

.emotion-0 .emotion-3 {
  width: 30%;
}

.emotion-2 {
  border-bottom: 1px #d9dadd solid;
  padding-block: 1rem;
}

.emotion-2:first-of-type {
  padding-top: 0;
}

.emotion-2:last-of-type {
  padding-bottom: 0;
  border-bottom-color: transparent;
}

.emotion-2>*:not(:last-child) {
  padding-right: 1rem;
}

.emotion-4 {
  font-weight: 500;
  color: #222638;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.emotion-6 {
  color: #3f4250;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.emotion-8 {
  display: block;
  min-width: 0;
  width: 100%;
}

.emotion-8>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <dl
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr);"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: 2fr 1fr; --uv_3mg8xe1: 2fr 1fr; --uv_3mg8xe2: 2fr 1fr; --uv_3mg8xe3: 2fr 1fr; --uv_3mg8xe4: 2fr 1fr; --uv_3mg8xe5: 2fr 1fr;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell with more text
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: 1fr; --uv_3mg8xe1: 1fr; --uv_3mg8xe2: 1fr; --uv_3mg8xe3: 1fr; --uv_3mg8xe4: 1fr; --uv_3mg8xe5: 1fr;"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3 uv_x6hyh50 "
        style="--uv_3mg8xe0: repeat(3, 1fr); --uv_3mg8xe1: repeat(3, 1fr); --uv_3mg8xe2: repeat(3, 1fr); --uv_3mg8xe3: repeat(3, 1fr); --uv_3mg8xe4: repeat(3, 1fr); --uv_3mg8xe5: repeat(3, 1fr);"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: 100%; --uv_4k0ekn2: 0;"
        >
          <dt
            class="emotion-4 emotion-5"
          >
            <div
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owo uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
            >
              title
            </div>
          </dt>
          <dd
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              cell
            </div>
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
